<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titleText"
        android:textColor="@color/icons"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/btnRandomlyCreatingObjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="playRandomlyCreatingObjects"
                android:text="@string/randomly"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

            <Button
                android:id="@+id/btnWontWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="playTheButtonWontWork"
                android:text="@string/wontWork"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

            <Button
                android:id="@+id/btnStopIt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="playStopIt"
                android:text="@string/stopIt"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

            <Button
                android:id="@+id/btnCantGoBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="playICantGoBack"
                android:text="@string/iCantGoBack"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

            <Button
                android:id="@+id/btnGoodPractice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="playIThinkItsGoodPractice"
                android:text="@string/goodPractice"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

            <Button
                android:id="@+id/btnSeeYaThere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="playSeeYaThere"
                android:text="@string/seeYaThere"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

            <Button
                android:id="@+id/btnInThisVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="playInThisVideo"
                android:text="@string/inThisVideo"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

            <Button
                android:id="@+id/btnPreviousVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="playPreviousVideo"
                android:text="@string/previousVideo"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

            <Button
                android:id="@+id/btnHawaii"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="playHawaii"
                android:text="@string/haw50"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

            <Button
                android:id="@+id/btnSomewhereOverTheRainbow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="playSomewhereOverTheRainbow"
                android:text="@string/somewhere"
                android:textColor="@color/icons"
                app:backgroundTint="@color/primary_dark" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>